fix radiobutton on mobile, fix checkbox in filterrooms, fix reset buttons in filter

--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -206,6 +206,25 @@
   flex-direction: column;
   gap: 20px;
   width: 100%;
+
+  & :first-child {
+    color: $lightFontColor;
+    background-color: $Secondary-800;
+
+    &:hover,
+    &:focus {
+      background-color: $Primary-50;
+      color: $Secondary-800;
+      border: 1px solid $Secondary-800;
+    }
+
+    &:active {
+      background-color: $Primary-50;
+      color: $Secondary-800;
+      border: 1px solid $Secondary-800;
+      box-shadow: -2px -2px 8px 0px rgba(69, 73, 67, 0.35) inset;
+    }
+  }
 }
 
 .filterButtonSearch {
@@ -221,12 +240,13 @@
   font-weight: 400;
   line-height: 25.6px;
   word-wrap: break-word;
+  font-family: inherit;
 
   border-radius: 8px;
-  border: none;
+  border: 1px solid transparent;
 
   background-color: $lightFontColor;
-  box-shadow: 2px 2px 4px 0px rgba(69, 73, 67, 0.25) !important;
+  box-shadow: 2px 2px 4px 0px rgba(69, 73, 67, 0.25);
 
   // margin-top: 18px;
 
@@ -234,8 +254,15 @@
 
   &:hover,
   &:focus {
-    background-color: $accentColor;
+    background-color: $Secondary-800;
     color: $lightFontColor;
+  }
+
+  &:active {
+    background-color: $lightFontColor;
+    color: $Secondary-800;
+    border: 1px solid $Secondary-800;
+    box-shadow: -2px -2px 8px 0px rgba(69, 73, 67, 0.35) inset;
   }
 
   @media screen and (min-width: $tablet) {
@@ -399,7 +426,11 @@
   content: "";
   position: absolute;
   left: 4px;
-  top: 7px;
+  top: 4px;
+
+  @media screen and (min-width: $tablet) {
+    top: 7px;
+  }
 
   width: 18px;
   height: 18px;
