--- a/src/components/FilterRooms/FilterRoomItem/FilterRoomItem.module.scss
+++ b/src/components/FilterRooms/FilterRoomItem/FilterRoomItem.module.scss
@@ -41,10 +41,10 @@
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  width: 28px;
-  height: 10px;
-  background: $Primary300;
-  border-radius: 50px;
+  width: 24px;
+  height: 24px;
+  color: $Gray-100;
+  // border-radius: 50px;
 
   cursor: pointer;
   -webkit-transition: 0.4s;
@@ -54,17 +54,11 @@
   &::after {
     position: absolute;
     content: "";
-    top: -3px;
-    left: -3px;
-    width: 16px;
-    height: 16px;
-    background: $lightFontColor;
-    border-radius: 50%;
-    -webkit-box-shadow: 0px 2px 8px 0px #00000029;
-    box-shadow: 0px 2px 8px 0px #00000029;
-    -webkit-transition: 0.4s;
-    -o-transition: 0.4s;
-    transition: 0.4s;
+    // width: 24px;
+    // height: 24px;
+    border: 1px $Primary-900 solid;
+
+    color: $Primary-900;
   }
 }
 
@@ -73,29 +67,84 @@
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  width: 28px;
-  height: 10px;
-  border-radius: 50px;
+  width: 24px;
+  height: 24px;
+  // border-radius: 50px;
 
   cursor: pointer;
   -webkit-transition: 0.4s;
   -o-transition: 0.4s;
   transition: 0.4s;
-  background: $Primary600;
+  // background: $Primary600;
 
   &::after {
     position: absolute;
-    top: -3px;
-    left: 50%;
     content: "";
-    width: 16px;
-    height: 16px;
-    background: $lightFontColor;
-    border-radius: 50%;
-    -webkit-box-shadow: 0px 2px 8px 0px #00000029;
-    box-shadow: 0px 2px 8px 0px #00000029;
-    -webkit-transition: 0.4s;
-    -o-transition: 0.4s;
-    transition: 0.4s;
+    // width: 24px;
+    // height: 24px;
+    border: 1px $Primary-900 solid;
+    background-color: $Gray-100;
+    color: $Primary-900;
   }
+}
+
+.checkbox {
+  position: absolute;
+  opacity: 0;
+  height: max-content;
+}
+
+.blogCheckboxDesc {
+  display: inline-block;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.6;
+  color: $Gray-900;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  column-gap: 16px;
+  position: relative;
+
+  &::before {
+    content: "";
+    display: block;
+    border-radius: 1px;
+    width: 24px;
+    height: 24px;
+    border: double 1px $Primary-900;
+    background-image: linear-gradient($Gray-100, $Gray-100);
+    //   $gradient;
+    background-origin: border-box;
+    background-clip: padding-box, border-box;
+    cursor: pointer;
+  }
+
+  @media screen and (min-width: $tablet) {
+    font-size: 20px;
+  }
+}
+
+.checked {
+  position: absolute;
+  top: 45%;
+  left: 2%;
+  transform: translateY(-45%);
+  width: 24px;
+  height: 24px;
+  stroke: $Primary-900;
+  fill: $Primary-900;
+}
+
+.checkedOff {
+  opacity: 0;
+  z-index: -1;
+}
+
+.checkedOn {
+  opacity: 1;
+  z-index: 0;
 }
